tests/paczka1/fuzzy1/95280374.err
Error in line 8: vvivw0 S925 37,0
Error in line 13: S925 A341 236,3
Error in line 15: 2uH3nt A341 99,8
Error in line 16: 2uH3nt S925 56,2
Error in line 32: S925 S828 78,0
